[package]
name = "x23"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bytes = "1.10.1"
futures = "0.3.31"
lz4_flex = "0.11.3"
num_enum = "0.7.3"
semver = "1.0.26"
spop = "0.9.1"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full"] }
tokio-util = { version = "0.7.15", features = ["codec"] }
tokio-utils = "0.1.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
urlencoding = "2.1.3"
